dataloaders for two sentence tasks

--- a/fast/glue.ipynb
+++ b/fast/glue.ipynb
@@ -129,17 +129,17 @@
     "- Embedding type\n",
     "    - cls\n",
     "    - mean_pooling\n",
-    "    - sentence_transformer"
+    "    - sentence"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [],
    "source": [
     "model_param = \"DistilRoBERTaBase\"\n",
-    "task_param = \"cola\"\n",
+    "task_param = \"sst2\"\n",
     "embedding_param = \"cls\""
    ]
   },
@@ -152,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -228,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
@@ -237,20 +237,20 @@
        "DatasetDict({\n",
        "    train: Dataset({\n",
        "        features: ['sentence', 'label', 'idx'],\n",
-       "        num_rows: 8551\n",
+       "        num_rows: 67349\n",
        "    })\n",
        "    validation: Dataset({\n",
        "        features: ['sentence', 'label', 'idx'],\n",
-       "        num_rows: 1043\n",
+       "        num_rows: 872\n",
        "    })\n",
        "    test: Dataset({\n",
        "        features: ['sentence', 'label', 'idx'],\n",
-       "        num_rows: 1063\n",
+       "        num_rows: 1821\n",
        "    })\n",
        "})"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 70,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -269,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -292,18 +292,60 @@
     "            truncation=True,\n",
     "            return_tensors='pt'\n",
     "        )\n",
-    "        return inputs['input_ids'].squeeze(0), inputs['attention_mask'].squeeze(0)"
+    "        return inputs['input_ids'].squeeze(0), inputs['attention_mask'].squeeze(0)\n",
+    "    \n",
+    "class GLUEPairedSentence(Dataset):\n",
+    "    def __init__(self, texts1, texts2, tokenizer, max_length=512):\n",
+    "        self.tokenizer = tokenizer\n",
+    "        self.texts1 = texts1\n",
+    "        self.texts2 = texts2\n",
+    "        self.max_length = max_length\n",
+    "\n",
+    "    def __len__(self):\n",
+    "        return len(self.texts1)\n",
+    "\n",
+    "    def __getitem__(self, idx):\n",
+    "        text1 = self.texts1[idx]\n",
+    "        text2 = self.texts2[idx]\n",
+    "\n",
+    "        inputs1 = self.tokenizer.encode_plus(\n",
+    "            text1, \n",
+    "            add_special_tokens=True, \n",
+    "            max_length=self.max_length,\n",
+    "            padding='max_length',\n",
+    "            truncation=True,\n",
+    "            return_tensors='pt'\n",
+    "        )\n",
+    "        inputs2 = self.tokenizer.encode_plus(\n",
+    "            text2, \n",
+    "            add_special_tokens=True, \n",
+    "            max_length=self.max_length,\n",
+    "            padding='max_length',\n",
+    "            truncation=True,\n",
+    "            return_tensors='pt'\n",
+    "        )\n",
+    "        return inputs1['input_ids'].squeeze(0), inputs1['attention_mask'].squeeze(0), \\\n",
+    "               inputs2['input_ids'].squeeze(0), inputs2['attention_mask'].squeeze(0)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_dataset = GLUESingleSentence(data['train']['sentence'], tokenizer)\n",
-    "val_dataset = GLUESingleSentence(data['validation']['sentence'], tokenizer)\n",
-    "test_dataset = GLUESingleSentence(data['test']['sentence'], tokenizer)\n",
+    "if task_config.sentence_type == \"one\":\n",
+    "    train_dataset = GLUESingleSentence(data['train']['sentence'], tokenizer)\n",
+    "    val_dataset = GLUESingleSentence(data['validation']['sentence'], tokenizer)\n",
+    "    test_dataset = GLUESingleSentence(data['test']['sentence'], tokenizer)\n",
+    "elif task_config.sentence_type == \"two\":\n",
+    "    key1 = task_config.col_names[0]\n",
+    "    key2 = task_config.col_names[1]\n",
+    "    train_dataset = GLUEPairedSentence(data['train'][key1], data['train'][key2], tokenizer)\n",
+    "    val_dataset = GLUEPairedSentence(data['validation'][key1], data['validation'][key2], tokenizer)\n",
+    "    test_dataset = GLUEPairedSentence(data['test'][key1], data['test'][key2], tokenizer)\n",
+    "else:\n",
+    "    raise Exception(f\"{task_config.sentence_type}: sentence type not recognized\")\n",
     "\n",
     "# pick batch size based on GPU memory\n",
     "batch_size = 512\n",
@@ -314,35 +356,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 17/17 [00:30<00:00,  1.77s/it]\n",
-      "100%|██████████| 3/3 [00:05<00:00,  1.70s/it]\n",
-      "100%|██████████| 3/3 [00:03<00:00,  1.31s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "torch.Size([8551, 768])\n",
-      "torch.Size([1043, 768])\n",
-      "torch.Size([1063, 768])\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def mean_pooling(model_output, attention_mask):\n",
     "    token_embeddings = model_output[0]  # First element of model_output contains all token embeddings\n",
@@ -356,7 +372,7 @@
     "    cls_embedding = last_hidden_state[:, 0, :]\n",
     "    return cls_embedding\n",
     "\n",
-    "def compute_embeddings(loader):\n",
+    "def compute_single_embeddings(loader):\n",
     "    model.eval()\n",
     "    with torch.no_grad():\n",
     "        embeddings = []\n",
@@ -366,16 +382,48 @@
     "\n",
     "            outputs = model(input_ids, attention_mask=attention_mask)\n",
     "\n",
-    "            # embeding = mean_pooling(outputs, attention_mask)\n",
-    "            embeding = extract_cls(outputs)\n",
+    "            if embedding_param == \"cls\":\n",
+    "                embed = extract_cls(outputs)\n",
+    "            elif embedding_param == \"mean_pooling\":\n",
+    "                embed = mean_pooling(outputs, attention_mask)\n",
     "\n",
-    "            embeddings.append(embeding)\n",
+    "            embeddings.append(embed)\n",
     "\n",
     "        return torch.cat(embeddings, 0)\n",
-    "    \n",
-    "train_embed = compute_embeddings(train_loader)\n",
-    "val_embed = compute_embeddings(val_loader)\n",
-    "test_embed = compute_embeddings(test_loader)\n",
+    "\n",
+    "def compute_pair_embeddings(loader):\n",
+    "    model.eval()\n",
+    "    with torch.no_grad():\n",
+    "        embeddings = []\n",
+    "        for input_ids1, attention_mask1, input_ids2, attention_mask2 in tqdm(loader):\n",
+    "            input_ids1 = input_ids1.to(device)\n",
+    "            attention_mask1 = attention_mask1.to(device)\n",
+    "            input_ids2 = input_ids2.to(device)\n",
+    "            attention_mask2 = attention_mask2.to(device)\n",
+    "\n",
+    "            outputs1 = model(input_ids1, attention_mask=attention_mask1)\n",
+    "            outputs2 = model(input_ids2, attention_mask=attention_mask2)\n",
+    "\n",
+    "            if embedding_param == \"cls\":\n",
+    "                U = extract_cls(outputs1)\n",
+    "                V = extract_cls(outputs2)\n",
+    "            elif embedding_param == \"mean_pooling\":\n",
+    "                U = mean_pooling(outputs1, attention_mask1)\n",
+    "                V = mean_pooling(outputs2, attention_mask2)\n",
+    "\n",
+    "            embed = torch.cat([U, V], dim=1)\n",
+    "            embeddings.append(embed)\n",
+    "\n",
+    "        return torch.cat(embeddings, 0)\n",
+    "\n",
+    "if task_config.sentence_type == \"one\":\n",
+    "    train_embed = compute_single_embeddings(train_loader)\n",
+    "    val_embed = compute_single_embeddings(val_loader)\n",
+    "    test_embed = compute_single_embeddings(test_loader)\n",
+    "elif task_config.sentence_type == \"two\":\n",
+    "    train_embed = compute_pair_embeddings(train_loader)\n",
+    "    val_embed = compute_pair_embeddings(val_loader)\n",
+    "    test_embed = compute_pair_embeddings(test_loader)\n",
     "\n",
     "print(train_embed.shape)\n",
     "print(val_embed.shape)\n",
@@ -384,7 +432,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -483,7 +531,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -547,7 +595,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -581,21 +629,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "saving results to ./output/val_results_cls_cola_20231129_140656.csv\n"
+      "saving results to ./output/val_results_mean_pooling_mrpc_20231129_143856.csv\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Best Acc: 0.76414, Last test: 0.75935: 100%|██████████| 54/54 [01:59<00:00,  2.22s/it]\n"
+      "Best Acc: 0.72059, Last test: 0.69853: 100%|██████████| 54/54 [00:42<00:00,  1.27it/s]\n"
      ]
     }
    ],
@@ -646,91 +694,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Best mcc: 0.43688\n",
-      "        mcc        f1  accuracy  num_epochs  batch_size  learning_rate  \\\n",
-      "5  0.436881  0.758389  0.758389          50          32           0.01   \n",
+      "Best accuracy: 0.72059\n",
+      "         mcc        f1  accuracy  num_epochs  batch_size  learning_rate  \\\n",
+      "36  0.295866  0.720588  0.720588          50         512           0.01   \n",
       "\n",
-      "  category   norm  input_size  layer_size  num_layers  weight_decay  patience  \\\n",
-      "5       BC  False         768         768           2        0.0001         3   \n",
+      "   category   norm  input_size  layer_size  num_layers  weight_decay  \\\n",
+      "36       BC  False        1536        1536           1          0.01   \n",
       "\n",
-      "   min_delta device  \n",
-      "5          0   cuda  \n"
+      "    patience  min_delta device  \n",
+      "36         3          0   cuda  \n"
      ]
     }
    ],
    "source": [
     "results_df = pd.read_csv(results_filename)\n",
     "# results_df = pd.read_csv(\"output/val_results_cola_20231127_151717.csv\")\n",
-    "metric = \"mcc\"\n",
+    "metric = \"accuracy\"\n",
     "best = results_df[metric].max()\n",
     "best_row = results_df[results_df[metric] == best]\n",
     "print(f\"Best {metric}: {best:.5f}\")\n",
     "print(best_row)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Predictions"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# manually set this based on output CSV file\n",
-    "best_params = {\n",
-    "    'num_epochs': 50,\n",
-    "    'batch_size': 128,\n",
-    "    'learning_rate': 1e-2,\n",
-    "    'category': 'C',\n",
-    "    'norm': False,\n",
-    "    'input_size': 768,\n",
-    "    'layer_size': 6,\n",
-    "    'num_layers': 3,\n",
-    "    'weight_decay':1e-2,\n",
-    "    'patience': 3,\n",
-    "    'min_delta': 0,\n",
-    "    'device': device_name\n",
-    "}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "best_feed_forward = FeedForward(**best_params)\n",
-    "\n",
-    "X = np.concatenate((X_train, X_val), axis=0)\n",
-    "Y = np.concatenate((Y_train, Y_val), axis=0)\n",
-    "\n",
-    "best_feed_forward.fit(X, Y)\n",
-    "\n",
-    "preds = np.argmax(best_feed_forward.predict_proba(X_test), axis=1)\n",
-    "print(preds.shape)\n",
-    "\n",
-    "df = pd.DataFrame({\n",
-    "    'index': range(len(preds)),\n",
-    "    'prediction': preds\n",
-    "})\n",
-    "\n",
-    "random.seed()  # set random seed based on current time just to generate random file_id\n",
-    "random_file_id = str(round(random.random() * 10000))\n",
-    "random.seed(0)  # reset random seed back to standard 0 seed\n",
-    "# Write the DataFrame to a .tsv file, without the header and index\n",
-    "df.to_csv(f'CoLA_{random_file_id}.tsv', sep='\\t', index=False, header=True)"
    ]
   }
  ],
