fixed gpu memory issues hopefully

--- a/fast/glue.ipynb
+++ b/fast/glue.ipynb
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -134,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -152,14 +152,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Some weights of the model checkpoint at distilroberta-base were not used when initializing RobertaModel: ['lm_head.bias', 'lm_head.dense.bias', 'lm_head.layer_norm.bias', 'lm_head.layer_norm.weight', 'lm_head.dense.weight']\n",
+      "Some weights of the model checkpoint at distilroberta-base were not used when initializing RobertaModel: ['lm_head.layer_norm.weight', 'lm_head.bias', 'lm_head.dense.bias', 'lm_head.dense.weight', 'lm_head.layer_norm.bias']\n",
       "- This IS expected if you are initializing RobertaModel from the checkpoint of a model trained on another task or with another architecture (e.g. initializing a BertForSequenceClassification model from a BertForPreTraining model).\n",
       "- This IS NOT expected if you are initializing RobertaModel from the checkpoint of a model that you expect to be exactly identical (initializing a BertForSequenceClassification model from a BertForSequenceClassification model).\n"
      ]
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -228,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -250,7 +250,7 @@
        "})"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -269,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -330,7 +330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -356,9 +356,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 132/132 [04:34<00:00,  2.08s/it]\n",
+      "100%|██████████| 2/2 [00:03<00:00,  1.82s/it]\n",
+      "100%|██████████| 4/4 [00:07<00:00,  1.90s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(67349, 768)\n",
+      "(872, 768)\n",
+      "(1821, 768)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "def mean_pooling(model_output, attention_mask):\n",
     "    token_embeddings = model_output[0]  # First element of model_output contains all token embeddings\n",
@@ -373,9 +399,9 @@
     "    return cls_embedding\n",
     "\n",
     "def compute_single_embeddings(loader):\n",
+    "    embeddings = []\n",
     "    model.eval()\n",
     "    with torch.no_grad():\n",
-    "        embeddings = []\n",
     "        for input_ids, attention_mask in tqdm(loader):\n",
     "            input_ids = input_ids.to(device)\n",
     "            attention_mask = attention_mask.to(device)\n",
@@ -387,14 +413,14 @@
     "            elif embedding_param == \"mean_pooling\":\n",
     "                embed = mean_pooling(outputs, attention_mask)\n",
     "\n",
-    "            embeddings.append(embed)\n",
+    "            embeddings.append(embed.cpu().numpy())\n",
     "\n",
-    "        return torch.cat(embeddings, 0)\n",
+    "    return np.concatenate(embeddings, axis=0)\n",
     "\n",
     "def compute_pair_embeddings(loader):\n",
+    "    embeddings = []\n",
     "    model.eval()\n",
     "    with torch.no_grad():\n",
-    "        embeddings = []\n",
     "        for input_ids1, attention_mask1, input_ids2, attention_mask2 in tqdm(loader):\n",
     "            input_ids1 = input_ids1.to(device)\n",
     "            attention_mask1 = attention_mask1.to(device)\n",
@@ -412,9 +438,9 @@
     "                V = mean_pooling(outputs2, attention_mask2)\n",
     "\n",
     "            embed = torch.cat([U, V], dim=1)\n",
-    "            embeddings.append(embed)\n",
+    "            embeddings.append(embed.cpu().numpy())\n",
     "\n",
-    "        return torch.cat(embeddings, 0)\n",
+    "    return np.concatenate(embeddings, axis=0)\n",
     "\n",
     "if task_config.sentence_type == \"one\":\n",
     "    train_embed = compute_single_embeddings(train_loader)\n",
@@ -432,13 +458,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
-    "X_train = train_embed.cpu().numpy()\n",
-    "X_val = val_embed.cpu().numpy()\n",
-    "X_test = test_embed.cpu().numpy()\n",
+    "X_train = train_embed\n",
+    "X_val = val_embed\n",
+    "X_test = test_embed\n",
     "\n",
     "Y_train = np.array(data[\"train\"][\"label\"])\n",
     "Y_val = np.array(data[\"validation\"][\"label\"])\n",
@@ -531,9 +557,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "object of type 'NoneType' has no len()",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m/home/jnb5885/projectx/fast/glue.ipynb Cell 26\u001b[0m line \u001b[0;36m4\n\u001b[1;32m     <a href='vscode-notebook-cell://ssh-remote%2B7b22686f73744e616d65223a22767373382e63732e6e6f7274687765737465726e2e656475222c2275736572223a226a6e6235383835227d/home/jnb5885/projectx/fast/glue.ipynb#X25sdnNjb2RlLXJlbW90ZQ%3D%3D?line=45'>46</a>\u001b[0m \u001b[39mwith\u001b[39;00m \u001b[39mopen\u001b[39m(\u001b[39mf\u001b[39m\u001b[39m'\u001b[39m\u001b[39m{\u001b[39;00moutput_directory\u001b[39m}\u001b[39;00m\u001b[39m/Y_test_\u001b[39m\u001b[39m{\u001b[39;00mtask_param\u001b[39m}\u001b[39;00m\u001b[39m_\u001b[39m\u001b[39m{\u001b[39;00mmodel_param\u001b[39m}\u001b[39;00m\u001b[39m.npy\u001b[39m\u001b[39m'\u001b[39m, \u001b[39m'\u001b[39m\u001b[39mrb\u001b[39m\u001b[39m'\u001b[39m) \u001b[39mas\u001b[39;00m Y_test_file:\n\u001b[1;32m     <a href='vscode-notebook-cell://ssh-remote%2B7b22686f73744e616d65223a22767373382e63732e6e6f7274687765737465726e2e656475222c2275736572223a226a6e6235383835227d/home/jnb5885/projectx/fast/glue.ipynb#X25sdnNjb2RlLXJlbW90ZQ%3D%3D?line=46'>47</a>\u001b[0m     Y_test \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39mload(Y_test_file)\n\u001b[0;32m---> <a href='vscode-notebook-cell://ssh-remote%2B7b22686f73744e616d65223a22767373382e63732e6e6f7274687765737465726e2e656475222c2275736572223a226a6e6235383835227d/home/jnb5885/projectx/fast/glue.ipynb#X25sdnNjb2RlLXJlbW90ZQ%3D%3D?line=48'>49</a>\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39msize of X_train: \u001b[39m\u001b[39m{\u001b[39;00m\u001b[39mlen\u001b[39m(X_train)\u001b[39m}\u001b[39;00m\u001b[39m\"\u001b[39m)\n",
+      "\u001b[0;31mTypeError\u001b[0m: object of type 'NoneType' has no len()"
+     ]
+    }
+   ],
    "source": [
     "# Save files\n",
     "# TODO: load_file has bugs :(\n",
@@ -595,7 +633,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -629,21 +667,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "saving results to ./output/val_results_mean_pooling_mrpc_20231129_143856.csv\n"
+      "saving results to ./output/val_results_cls_sst2_20231129_145826.csv\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Best Acc: 0.72059, Last test: 0.69853: 100%|██████████| 54/54 [00:42<00:00,  1.27it/s]\n"
+      "Best Acc: 0.87156, Last test: 0.86812: 100%|██████████| 54/54 [18:31<00:00, 20.59s/it]\n"
      ]
     }
    ],
@@ -694,22 +732,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Best accuracy: 0.72059\n",
-      "         mcc        f1  accuracy  num_epochs  batch_size  learning_rate  \\\n",
-      "36  0.295866  0.720588  0.720588          50         512           0.01   \n",
+      "Best accuracy: 0.87156\n",
+      "         mcc       f1  accuracy  num_epochs  batch_size  learning_rate  \\\n",
+      "51  0.743244  0.87156   0.87156          50         512          0.001   \n",
       "\n",
       "   category   norm  input_size  layer_size  num_layers  weight_decay  \\\n",
-      "36       BC  False        1536        1536           1          0.01   \n",
+      "51       BC  False         768         768           3          0.01   \n",
       "\n",
       "    patience  min_delta device  \n",
-      "36         3          0   cuda  \n"
+      "51         3          0   cuda  \n"
      ]
     }
    ],
