--- a/fast/glue.ipynb
+++ b/fast/glue.ipynb
@@ -198,22 +198,22 @@
    "outputs": [],
    "source": [
     "# sentence_type: [\"one\", \"two\"]\n",
-    "# class_type: [\"binary\", \"multi\", \"regression\"]\n",
+    "# class_type: [\"BC\", \"MC\", \"R\"]\n",
     "# input_size: int (represents input size of feedforward, aka embedding size)\n",
     "# col_names: column names of relavent sentences on hugging face\n",
     "\n",
     "TaskConfig = namedtuple(\"TaskConfig\", [\"sentence_type\", \"class_type\", \"input_size\", \"col_names\"])\n",
     "task_configs = {\n",
-    "    \"cola\": TaskConfig(\"one\", \"binary\", 768, ['sentence']),\n",
-    "    \"sst2\": TaskConfig(\"one\", \"binary\", 768, ['sentence']),\n",
-    "    \"mrpc\": TaskConfig(\"two\", \"binary\", 768*2, ['sentence1', 'sentence2']),\n",
-    "    \"stsb\": TaskConfig(\"two\", \"regression\", 768*2, ['sentence1', 'sentence2']),\n",
-    "    \"qqp\": TaskConfig(\"two\", \"binary\", 768*2, ['question1', 'question2']),\n",
-    "    \"mnli-m\": TaskConfig(\"two\", \"multi\", 768*2, ['premise', 'hypothesis']),\n",
-    "    \"mnli-mm\": TaskConfig(\"two\", \"multi\", 768*2, ['premise', 'hypothesis']),\n",
-    "    \"qnli\": TaskConfig(\"two\", \"binary\", 768*2, ['question', 'sentence']),\n",
-    "    \"rte\": TaskConfig(\"two\", \"binary\", 768*2, ['sentence1', 'sentence2']),\n",
-    "    \"wnli\": TaskConfig(\"two\", \"binary\", 768*2, ['sentence1', 'sentence2']),\n",
+    "    \"cola\": TaskConfig(\"one\", \"BC\", 768, ['sentence']),\n",
+    "    \"sst2\": TaskConfig(\"one\", \"BC\", 768, ['sentence']),\n",
+    "    \"mrpc\": TaskConfig(\"two\", \"BC\", 768*2, ['sentence1', 'sentence2']),\n",
+    "    \"stsb\": TaskConfig(\"two\", \"R\", 768*2, ['sentence1', 'sentence2']),\n",
+    "    \"qqp\": TaskConfig(\"two\", \"BC\", 768*2, ['question1', 'question2']),\n",
+    "    \"mnli-m\": TaskConfig(\"two\", \"MC\", 768*2, ['premise', 'hypothesis']),\n",
+    "    \"mnli-mm\": TaskConfig(\"two\", \"MC\", 768*2, ['premise', 'hypothesis']),\n",
+    "    \"qnli\": TaskConfig(\"two\", \"BC\", 768*2, ['question', 'sentence']),\n",
+    "    \"rte\": TaskConfig(\"two\", \"BC\", 768*2, ['sentence1', 'sentence2']),\n",
+    "    \"wnli\": TaskConfig(\"two\", \"BC\", 768*2, ['sentence1', 'sentence2']),\n",
     "}\n",
     "\n",
     "task_config = task_configs[task_param]"
@@ -455,7 +455,7 @@
     "    mean_embeddings = torch.sum(masked_embeddings, 1) / torch.clamp(input_mask_expanded.sum(1), min=1e-9)\n",
     "    return torch.nn.functional.normalize(mean_embeddings, p=2, dim=1)\n",
     "\n",
-    "def extract_cls(model_output):\n",
+    "def extract_cls_embeddings(model_output):\n",
     "    last_hidden_state = model_output['last_hidden_state']\n",
     "    cls_embedding = last_hidden_state[:, 0, :]\n",
     "    return cls_embedding\n",
@@ -471,7 +471,7 @@
     "            outputs = model(input_ids, attention_mask=attention_mask)\n",
     "\n",
     "            if embedding_param == \"cls\":\n",
-    "                embed = extract_cls(outputs)\n",
+    "                embed = extract_cls_embeddings(outputs)\n",
     "            elif embedding_param == \"mean_pooling\":\n",
     "                embed = mean_pooling(outputs, attention_mask)\n",
     "\n",
@@ -493,8 +493,8 @@
     "            outputs2 = model(input_ids2, attention_mask=attention_mask2)\n",
     "\n",
     "            if embedding_param == \"cls\":\n",
-    "                U = extract_cls(outputs1)\n",
-    "                V = extract_cls(outputs2)\n",
+    "                U = extract_cls_embeddings(outputs1)\n",
+    "                V = extract_cls_embeddings(outputs2)\n",
     "            elif embedding_param == \"mean_pooling\":\n",
     "                U = mean_pooling(outputs1, attention_mask1)\n",
     "                V = mean_pooling(outputs2, attention_mask2)\n",
@@ -580,7 +580,7 @@
     "    'num_epochs': [50],\n",
     "    'batch_size': [32, 128, 512],\n",
     "    'learning_rate': [1e-2, 1e-3],\n",
-    "    'category': ['BC'],\n",
+    "    'category': [task_config.class_type],\n",
     "    'norm': [False],\n",
     "    'input_size': [task_config.input_size],\n",
     "    'layer_size': [task_config.input_size],\n",
