--- a/fast/glue.ipynb
+++ b/fast/glue.ipynb
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,23 +77,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "cuda\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "device_name = \"cpu\"  # default device is CPU\n",
     "if torch.cuda.is_available():\n",
-    "    device_name = \"cuda\"  # CUDA for NVIDIA GPU\n",
+    "    device_name = \"gpu\"  # CUDA for NVIDIA GPU\n",
     "elif torch.backends.mps.is_available():\n",
     "    device_name = torch.device(\"mps\")  # Metal Performance Shaders for Apple M-series GPU\n",
+    "\n",
     "device = torch.device(device_name)\n",
     "print(device_name)"
    ]
@@ -121,8 +114,8 @@
     "    - mrpc\n",
     "    - stsb\n",
     "    - qqp\n",
-    "    - mnli-m\n",
-    "    - mnli-mm\n",
+    "    - mnli_matched\n",
+    "    - mnli_mismatched\n",
     "    - qnli\n",
     "    - rte\n",
     "    - wnli\n",
@@ -134,13 +127,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "model_param = \"DistilRoBERTaBase\"\n",
-    "task_param = \"cola\"\n",
-    "embedding_param = \"mean_pooling\""
+    "task_param = \"mnli_matched\"\n",
+    "embedding_param = \"cls\""
    ]
   },
   {
@@ -152,19 +145,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Some weights of the model checkpoint at distilroberta-base were not used when initializing RobertaModel: ['lm_head.layer_norm.bias', 'lm_head.bias', 'lm_head.dense.bias', 'lm_head.layer_norm.weight', 'lm_head.dense.weight']\n",
-      "- This IS expected if you are initializing RobertaModel from the checkpoint of a model trained on another task or with another architecture (e.g. initializing a BertForSequenceClassification model from a BertForPreTraining model).\n",
-      "- This IS NOT expected if you are initializing RobertaModel from the checkpoint of a model that you expect to be exactly identical (initializing a BertForSequenceClassification model from a BertForSequenceClassification model).\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "if model_param == \"MPNetBase\": # MPNet Base\n",
     "    from transformers import MPNetTokenizer, MPNetModel\n",
@@ -193,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -209,8 +192,8 @@
     "    \"mrpc\": TaskConfig(\"two\", \"BC\", 768*2, ['sentence1', 'sentence2']),\n",
     "    \"stsb\": TaskConfig(\"two\", \"R\", 768*2, ['sentence1', 'sentence2']),\n",
     "    \"qqp\": TaskConfig(\"two\", \"BC\", 768*2, ['question1', 'question2']),\n",
-    "    \"mnli-m\": TaskConfig(\"two\", \"MC\", 768*2, ['premise', 'hypothesis']),\n",
-    "    \"mnli-mm\": TaskConfig(\"two\", \"MC\", 768*2, ['premise', 'hypothesis']),\n",
+    "    \"mnli_matched\": TaskConfig(\"two\", \"MC\", 768*2, ['premise', 'hypothesis']),\n",
+    "    \"mnli_mismatched\": TaskConfig(\"two\", \"MC\", 768*2, ['premise', 'hypothesis']),\n",
     "    \"qnli\": TaskConfig(\"two\", \"BC\", 768*2, ['question', 'sentence']),\n",
     "    \"rte\": TaskConfig(\"two\", \"BC\", 768*2, ['sentence1', 'sentence2']),\n",
     "    \"wnli\": TaskConfig(\"two\", \"BC\", 768*2, ['sentence1', 'sentence2']),\n",
@@ -228,35 +211,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "DatasetDict({\n",
-       "    train: Dataset({\n",
-       "        features: ['sentence', 'label', 'idx'],\n",
-       "        num_rows: 8551\n",
-       "    })\n",
-       "    validation: Dataset({\n",
-       "        features: ['sentence', 'label', 'idx'],\n",
-       "        num_rows: 1043\n",
-       "    })\n",
-       "    test: Dataset({\n",
-       "        features: ['sentence', 'label', 'idx'],\n",
-       "        num_rows: 1063\n",
-       "    })\n",
-       "})"
-      ]
-     },
-     "execution_count": 33,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "data = load_dataset(\"glue\", task_param)\n",
+    "if task_param == \"mnli_matched\": \n",
+    "    data = load_dataset(\"glue\", \"mnli\") \n",
+    "    val_key = \"validation_matched\"\n",
+    "    test_key = \"test_matched\"\n",
+    "elif task_param == \"mnli_mismatched\":\n",
+    "    data = load_dataset(\"glue\", \"mnli\") \n",
+    "    val_key = \"validation_mismatched\"\n",
+    "    test_key = \"test_mismatched\"\n",
+    "else:\n",
+    "    data = load_dataset(\"glue\", task_param)\n",
+    "    val_key = \"validation\"\n",
+    "    test_key = \"test\"\n",
+    "\n",
     "data"
    ]
   },
@@ -276,13 +247,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "Y_train = np.array(data[\"train\"][\"label\"])\n",
-    "Y_val = np.array(data[\"validation\"][\"label\"])\n",
-    "Y_test = np.array(data[\"test\"][\"label\"])"
+    "Y_val = np.array(data[val_key][\"label\"])\n",
+    "Y_test = np.array(data[test_key][\"label\"])"
    ]
   },
   {
@@ -294,17 +265,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "no saved embeddings found\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "cache_dir = f\"./cache/{embedding_param}/{task_param}\"\n",
     "cache_path = pathlib.Path(cache_dir)\n",
@@ -331,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -392,7 +355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -404,13 +367,13 @@
     "    key1 = task_config.col_names[0]\n",
     "    key2 = task_config.col_names[1]\n",
     "    train_dataset = GLUEPairedSentence(data['train'][key1], data['train'][key2], tokenizer)\n",
-    "    val_dataset = GLUEPairedSentence(data['validation'][key1], data['validation'][key2], tokenizer)\n",
-    "    test_dataset = GLUEPairedSentence(data['test'][key1], data['test'][key2], tokenizer)\n",
+    "    val_dataset = GLUEPairedSentence(data[val_key][key1], data[val_key][key2], tokenizer)\n",
+    "    test_dataset = GLUEPairedSentence(data[test_key][key1], data[test_key][key2], tokenizer)\n",
     "else:\n",
     "    raise Exception(f\"{task_config.sentence_type}: sentence type not recognized\")\n",
     "\n",
     "# pick batch size based on GPU memory\n",
-    "batch_size = 512\n",
+    "batch_size = 128\n",
     "train_loader = DataLoader(train_dataset, batch_size=batch_size, shuffle=False)\n",
     "val_loader = DataLoader(val_dataset, batch_size=batch_size, shuffle=False)\n",
     "test_loader = DataLoader(test_dataset, batch_size=batch_size, shuffle=False)"
@@ -418,35 +381,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 17/17 [00:34<00:00,  2.03s/it]\n",
-      "100%|██████████| 3/3 [00:04<00:00,  1.42s/it]\n",
-      "100%|██████████| 3/3 [00:04<00:00,  1.45s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(8551, 768)\n",
-      "(1043, 768)\n",
-      "(1063, 768)\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def mean_pooling(model_output, attention_mask):\n",
     "    token_embeddings = model_output[0]  # First element of model_output contains all token embeddings\n",
@@ -474,7 +411,7 @@
     "                embed = extract_cls_embeddings(outputs)\n",
     "            elif embedding_param == \"mean_pooling\":\n",
     "                embed = mean_pooling(outputs, attention_mask)\n",
-    "\n",
+    "                \n",
     "            embeddings.append(embed.cpu().numpy())\n",
     "\n",
     "    return np.concatenate(embeddings, axis=0)\n",
@@ -511,7 +448,7 @@
     "elif task_config.sentence_type == \"two\":\n",
     "    train_embed = compute_pair_embeddings(train_loader)\n",
     "    val_embed = compute_pair_embeddings(val_loader)\n",
-    "    test_embed = compute_pair_embeddings(test_loader)\n",
+    "    test_embed = compute_pair_embeddings(test_loader) \n",
     "\n",
     "print(train_embed.shape)\n",
     "print(val_embed.shape)\n",
@@ -520,7 +457,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -538,7 +475,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -564,17 +501,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "54 hyperparameter combinations\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "param_grid = {\n",
     "    'num_epochs': [50],\n",
@@ -602,6 +531,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from utils.feed_forward import FeedForward\n",
+    "\n",
     "# setup for logging\n",
     "console_output_filename = f'./output/{task_param}_console_output.txt'\n",
     "with open(console_output_filename, 'a') as logfile:\n",
@@ -650,93 +581,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Best accuracy: 0.78140\n"
-     ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>mcc</th>\n",
-       "      <th>f1</th>\n",
-       "      <th>accuracy</th>\n",
-       "      <th>num_epochs</th>\n",
-       "      <th>batch_size</th>\n",
-       "      <th>learning_rate</th>\n",
-       "      <th>category</th>\n",
-       "      <th>norm</th>\n",
-       "      <th>input_size</th>\n",
-       "      <th>layer_size</th>\n",
-       "      <th>num_layers</th>\n",
-       "      <th>weight_decay</th>\n",
-       "      <th>patience</th>\n",
-       "      <th>min_delta</th>\n",
-       "      <th>device</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>0.492335</td>\n",
-       "      <td>0.7814</td>\n",
-       "      <td>0.7814</td>\n",
-       "      <td>50</td>\n",
-       "      <td>32</td>\n",
-       "      <td>0.01</td>\n",
-       "      <td>BC</td>\n",
-       "      <td>False</td>\n",
-       "      <td>768</td>\n",
-       "      <td>768</td>\n",
-       "      <td>2</td>\n",
-       "      <td>0.001</td>\n",
-       "      <td>3</td>\n",
-       "      <td>0</td>\n",
-       "      <td>cuda</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "        mcc      f1  accuracy  num_epochs  batch_size  learning_rate category  \\\n",
-       "4  0.492335  0.7814    0.7814          50          32           0.01       BC   \n",
-       "\n",
-       "    norm  input_size  layer_size  num_layers  weight_decay  patience  \\\n",
-       "4  False         768         768           2         0.001         3   \n",
-       "\n",
-       "   min_delta device  \n",
-       "4          0   cuda  "
-      ]
-     },
-     "execution_count": 47,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "results_df = pd.read_csv(results_file)\n",
     "# results_df = pd.read_csv(\"output/val_results_cola_20231127_151717.csv\")\n",
