Energy benchmarking (untested)

--- a/fast/glue.ipynb
+++ b/fast/glue.ipynb
@@ -581,7 +581,7 @@
         "    with open(results_file, 'w', newline='') as csvfile:\n",
         "        writer = csv.writer(csvfile)\n",
         "        headers = list(all_params[0].keys())\n",
-        "        writer.writerow(['mcc', 'f1', 'accuracy', 'training time'] + headers)\n",
+        "        writer.writerow(['mcc', 'f1', 'accuracy', 'training time', 'training energy'] + headers)\n",
         "    print(f\"saving results to ./{results_file}\")\n",
         "    # Saves best accuracy for progress bar display\n",
         "    best_acc = 0.0\n",
@@ -589,11 +589,11 @@
         "    with open(results_file, 'w', newline='') as csvfile:\n",
         "        writer = csv.writer(csvfile)\n",
         "        headers = list(all_params[0].keys())\n",
-        "        writer.writerow(['pearson', 'spearman', 'training time'] + headers)\n",
+        "        writer.writerow(['pearson', 'spearman', 'training time', 'training energy'] + headers)\n",
         "    print(f\"saving results to ./{results_file}\")\n",
         "    # Saves best accuracy for progress bar display\n",
         "    best_pearson = -2.0\n",
-        "    \n",
+        "\n",
         "# Iterate over all combinations of hyperparameters\n",
         "bar = tqdm(enumerate(all_params), total=len(all_params))\n",
         "for i, params in bar:\n",
@@ -605,12 +605,11 @@
         "    # Initialize the model with current set of hyperparameters\n",
         "    feed_forward = FeedForward(**params)\n",
         "\n",
-        "    start_time = time.time()  # Start time for this set of hyperparameters\n",
-        "\n",
-        "    metrics = feed_forward.fit(X_train, Y_train, X_val, Y_val)\n",
-        "\n",
-        "    end_time = time.time()  # End time for this set of hyperparameters\n",
-        "    training_time = end_time - start_time  # Calculate training time\n",
+        "    metrics, train_times_per_epoch, energy_per_epoch = feed_forward.fit(X_train, Y_train, X_val, Y_val)\n",
+        "    training_time = np.mean(train_times_per_epoch)\n",
+        "    training_energy = np.mean(energy_per_epoch) \n",
+        "    # Log average training time per epoch for current parameter set\n",
+        "    # Note: FFN frequently stops early\n",
         "\n",
         "    if task_config.class_type in [\"BC\", \"MC\"]:\n",
         "        epoch, val_loss, val_accuracy, val_f1, val_mcc = metrics[\"epoch\"], metrics[\"loss\"], metrics[\"acc\"], metrics[\"f1\"], metrics[\"mcc\"]\n",
@@ -625,10 +624,11 @@
         "            logfile.write(f\"\\nValidation f1-score: {val_f1}\")\n",
         "            logfile.write(f\"\\nValidation MCC     : {val_mcc}\")\n",
         "            logfile.write(f\"\\nTraining time      : {training_time}\") \n",
+        "            logfile.write(f\"\\nTraining energy    : {training_energy}\") \n",
         "        # Write to results csv\n",
         "        with open(results_file, 'a', newline='') as csvfile:\n",
         "            writer = csv.writer(csvfile)\n",
-        "            writer.writerow([val_mcc, val_f1, val_accuracy, training_time] + list(params.values()))\n",
+        "            writer.writerow([val_mcc, val_f1, val_accuracy, training_time, training_energy] + list(params.values()))\n",
         "            \n",
         "    elif task_config.class_type == \"R\":  # just report loss for regression task\n",
         "        epoch, val_loss, val_pearson, val_spearman = metrics[\"epoch\"], metrics[\"loss\"], metrics[\"pearson\"], metrics[\"spearman\"]\n",
@@ -643,10 +643,11 @@
         "            logfile.write(f\"\\nValidation Pearson's corrcoef: {val_pearson}\")\n",
         "            logfile.write(f\"\\nValidation Spearman's corrcoef: {val_spearman}\")\n",
         "            logfile.write(f\"\\nTraining time      : {training_time}\") \n",
+        "            logfile.write(f\"\\nTraining energy    : {training_energy}\") \n",
         "        # Write to results csv\n",
         "        with open(results_file, 'a', newline='') as csvfile:\n",
         "            writer = csv.writer(csvfile)\n",
-        "            writer.writerow([val_pearson, val_spearman, training_time] + list(params.values()))"
+        "            writer.writerow([val_pearson, val_spearman, training_time, training_energy] + list(params.values()))"
       ]
     },
     {
